--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/homestead": "^6.5",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0"
     },
