--- a/composer.json
+++ b/composer.json
@@ -1,65 +1,69 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": ">=7.0.0",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "spatie/laravel-html" : "~2.9.0"
+    "name" : "laravel/laravel",
+    "description" : "The Laravel Framework.",
+    "keywords" : [
+        "framework",
+        "laravel"
+    ],
+    "license" : "MIT",
+    "type" : "project",
+    "require" : {
+        "php" : ">=7.0.0",
+        "fideloper/proxy" : "~3.3",
+        "laravel/framework" : "5.5.*",
+        "laravel/tinker" : "~1.0",
+        "marvinlabs/laravel-html-font-awesome" : "*"
     },
-    "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.1",
-        "barryvdh/laravel-ide-helper": "^2.4",
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "laravel/homestead": "^6.5",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+    "require-dev" : {
+        "barryvdh/laravel-debugbar" : "^3.1",
+        "barryvdh/laravel-ide-helper" : "^2.4",
+        "filp/whoops" : "~2.0",
+        "fzaninotto/faker" : "~1.4",
+        "laravel/homestead" : "^6.5",
+        "mockery/mockery" : "0.9.*",
+        "phpunit/phpunit" : "~6.0"
     },
-    "autoload": {
-        "classmap": [
+    "autoload" : {
+        "classmap" : [
             "database/seeds",
             "database/factories"
         ],
-        "psr-4": {
-            "App\\": "app/",
-            "MarvinLabs\\Html\\FontAwesome\\" : "packages/marvinlabs/laravel-html-font-awesome/src/FontAwesome"
-        },
-        "files" : [
-            "packages/marvinlabs/laravel-html-font-awesome/src/helpers.php"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/",
-            "MarvinLabs\\Html\\FontAwesome\\Tests\\" : "packages/marvinlabs/laravel-html-font-awesome/tests"
+        "psr-4" : {
+            "App\\" : "app/"
         }
     },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
+    "autoload-dev" : {
+        "psr-4" : {
+            "Tests\\" : "tests/"
+        }
+    },
+    "extra" : {
+        "laravel" : {
+            "dont-discover" : [
             ]
         }
     },
-    "scripts": {
-        "post-root-package-install": [
+    "scripts" : {
+        "post-root-package-install" : [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "post-create-project-cmd": [
+        "post-create-project-cmd" : [
             "@php artisan key:generate"
         ],
-        "post-autoload-dump": [
+        "post-autoload-dump" : [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
         ]
     },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    }
+    "config" : {
+        "preferred-install" : "dist",
+        "sort-packages" : true,
+        "optimize-autoloader" : true
+    },
+    "repositories" : [
+        {
+            "type" : "path",
+            "url" : "packages/marvinlabs/laravel-html-font-awesome"
+        }
+    ]
 }
