--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "fideloper/proxy" : "~3.3",
         "laravel/framework" : "5.5.*",
         "laravel/tinker" : "~1.0",
-        "marvinlabs/laravel-html-font-awesome" : "dev-develop",
-        "marvinlabs/laravel-html-bootstrap-4": "dev-develop"
+        "marvinlabs/laravel-html-font-awesome" : "@dev",
+        "marvinlabs/laravel-html-bootstrap-4": "@dev"
     },
     "require-dev" : {
         "barryvdh/laravel-debugbar" : "^3.1",
@@ -22,7 +22,8 @@
         "fzaninotto/faker" : "~1.4",
         "laravel/homestead" : "^6.5",
         "mockery/mockery" : "0.9.*",
-        "phpunit/phpunit" : "~6.0"
+        "phpunit/phpunit" : "~6.4",
+        "orchestra/testbench": "~3.5"
     },
     "autoload" : {
         "classmap" : [
@@ -35,7 +36,8 @@
     },
     "autoload-dev" : {
         "psr-4" : {
-            "Tests\\" : "tests/"
+            "Tests\\" : "tests/",
+            "MarvinLabs\\Html\\Bootstrap\\Tests\\" : "packages/marvinlabs/laravel-html-bootstrap-4/tests"
         }
     },
     "extra" : {
