--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "roave/security-advisories": "dev-master",
     "php": ">=7.2.0",
     "fideloper/proxy": "~4.0",
-    "laravel/framework": "5.6.4",
+    "laravel/framework": ">=5.6.4",
     "laravel/tinker": "~1.0",
     "marvinlabs/laravel-menus": "@dev",
     "marvinlabs/laravel-html-font-awesome": "@dev",
