--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "roave/security-advisories": "dev-master",
     "php": ">=7.2.0",
     "fideloper/proxy": "~4.0",
+    "graham-campbell/markdown": "^10.0",
     "laravel/framework": ">=5.6.4",
     "laravel/tinker": "~1.0",
-    "marvinlabs/laravel-menus": "*@dev",
     "marvinlabs/laravel-html-bootstrap-4": "*@dev",
-    "marvinlabs/laravel-html-font-awesome": "*@dev"
+    "marvinlabs/laravel-html-font-awesome": "*@dev",
+    "marvinlabs/laravel-menus": "*@dev",
+    "roave/security-advisories": "dev-master"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.1",
