--- a/composer.json
+++ b/composer.json
@@ -8,30 +8,31 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": ">=7.2.0",
-    "fideloper/proxy": "~4.0",
+    "php": ">=7.3.0",
+    "fideloper/proxy": "~4.1",
     "graham-campbell/markdown": "^10.0",
-    "laravel/framework": ">=5.6.4",
-    "laravel/tinker": "~1.0",
+    "laravel/framework": ">=5.8.0",
     "marvinlabs/laravel-html-bootstrap-4": "*@dev",
     "marvinlabs/laravel-html-font-awesome": "*@dev",
     "marvinlabs/laravel-menus": "*@dev",
     "marvinlabs/laravel-luhn": "*@dev",
-    "spatie/laravel-binary-uuid": "*@dev",
+    "marvinlabs/laravel-discord-logger": "*@dev",
     "spatie/laravel-model-status": "*@dev",
     "spatie/laravel-permission": "*@dev",
-    "roave/security-advisories": "dev-master"
+    "ext-json": "*"
   },
   "require-dev": {
-    "barryvdh/laravel-debugbar": "^3.1",
-    "barryvdh/laravel-ide-helper": "^2.4",
-    "filp/whoops": "~2.0",
+    "barryvdh/laravel-debugbar": "^3.2",
+    "barryvdh/laravel-ide-helper": "^2.6",
+    "filp/whoops": "~2.3",
     "fzaninotto/faker": "~1.4",
-    "laravel/homestead": "^7.0",
-    "mockery/mockery": "0.9.*",
-    "orchestra/testbench": "~3.6",
-    "phpunit/phpunit": "~7.0",
-    "symfony/dom-crawler": "^4.1"
+    "laravel/homestead": "^8.0",
+    "mockery/mockery": "^1.2",
+    "nunomaduro/collision": "~3.0",
+    "phpunit/phpunit": "~8.0",
+    "orchestra/testbench": "~3.8",
+    "symfony/dom-crawler": "^4.1",
+    "roave/security-advisories": "dev-master"
   },
   "autoload": {
     "classmap": [
@@ -48,7 +49,7 @@
       "MarvinLabs\\Html\\Bootstrap\\Tests\\": "packages/marvinlabs/laravel-html-bootstrap-4/tests",
       "MarvinLabs\\Menus\\Tests\\": "packages/marvinlabs/laravel-menus/tests",
       "MarvinLabs\\Luhn\\Tests\\": "packages/marvinlabs/laravel-luhn/tests",
-      "Spatie\\BinaryUuid\\Test\\": "packages/spatie/laravel-binary-uuid/tests",
+      "MarvinLabs\\DiscordLogger\\Tests\\": "packages/marvinlabs/laravel-discord-logger/tests",
       "Spatie\\ModelStatus\\Tests\\": "packages/spatie/laravel-model-status/tests",
       "Spatie\\Permission\\Test\\": "packages/spatie/laravel-permission/tests"
     }
@@ -86,6 +87,13 @@
     },
     {
       "type": "path",
+      "url": "packages/marvinlabs/laravel-discord-logger",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
       "url": "packages/marvinlabs/laravel-html-bootstrap-4",
       "options": {
         "symlink": true
@@ -101,13 +109,6 @@
     {
       "type": "path",
       "url": "packages/marvinlabs/laravel-luhn",
-      "options": {
-        "symlink": true
-      }
-    },
-    {
-      "type": "path",
-      "url": "packages/spatie/laravel-binary-uuid",
       "options": {
         "symlink": true
       }
